[package]
name = "oled-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ssd1306 = "0.10.0"
systemstat = "0.2.4"
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.4.0"
embedded-graphics-core = "0.4.0"
display-interface = "0.5.0"
embedded-graphics-simulator = { version = "0.7.0", optional = true }

[features]
simulator = ["embedded-graphics-simulator"]
