[package]
name = "oled-notifier"
version = "0.1.0"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
edition = "2024"
description = "Simple statistics for the ODROID-HC4 with OLED device"
repository = "https://github.com/wiktor-k/oled-notifier"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "hc4", "odroid", "oled"]
categories = ["embedded"]
exclude = [".github"]

[[bin]]
name = "simulate"
required-features = ["simulator"]

[dependencies]
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-graphics-simulator = { version = "0.7.0", optional = true }
linux-embedded-hal = "0.4.0"
ssd1306 = "0.10.0"
systemstat = "0.2.4"
unimpl = { version = "0.1.2", optional = true }

[features]
simulator = ["dep:embedded-graphics-simulator", "dep:unimpl"]
